--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
+title: ChatGPT Sentiment Analysis
+description: An in-depth sentiment analysis of ChatGPT reviews, including visualizations.
+show_downloads: true
 theme: jekyll-theme-cayman 
